--- a/frontend/src/components/RegistroUsuario.css
+++ b/frontend/src/components/RegistroUsuario.css
@@ -27,11 +27,6 @@ button {
     transition: background-color 0.3s;
 }
 
-button:hover {
-    background-color: #ffcb05;
-    color: #1a1a1a;
-}
-
 .registro-container h2 {
     text-align: center;
     margin-bottom: 1rem;
@@ -42,6 +37,11 @@ button:hover {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
+
+.registro-form button:hover{
+    background-color: #ffc107;
+    color: #1a1a1a;
 }
 
 .registro-form label {
@@ -55,10 +55,10 @@ button:hover {
 }
 
 .registro-form button {
-    background-color: #ffcb05;
-    color: #000000;
+    background-color: transparent;
+    color: #ffc107;
     font-weight: bold;
-    border: none;
+    border: 2px solid #ffcb05;
     padding: 0.7rem;
     border-radius: 5px;
     cursor: pointer;
