--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -30,3 +30,24 @@
 .nav a:hover {
     color: #ffcb05;
 }
+
+.boton-cerrar {
+    background-color: transparent;
+    color: #ffcb05;
+    border: 2px solid #ffcb05;
+    padding: 0.5rem 1rem;
+    font-weight: bold;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+}
+
+.boton-cerrar:hover {
+    background-color: #ffcb05;
+    color: #000;
+    cursor: pointer;
+    border: 2px solid #ffcb05;
+}
+
+.boton-cerrar:focus {
+    outline: none;
+}
