--- a/frontend/src/components/ListaProductosAdmin.css
+++ b/frontend/src/components/ListaProductosAdmin.css
@@ -51,3 +51,13 @@
     color: #1a1a1a;
     border: 2px solid #ffcb05;
 }
+
+.icon-btn {
+    font-size: 1.2rem;
+    cursor: pointer;
+    margin-right: 0.5rem;
+}
+
+.icon-btn:hover {
+    background-color: #e4ce78;
+}
