--- a/frontend/src/components/RegistroProducto.css
+++ b/frontend/src/components/RegistroProducto.css
@@ -81,3 +81,17 @@ button {
     font-family: inherit;
     width: 165px;
 }
+
+.registro-form select {
+    padding: 0.5rem;
+    border-radius: 5px;
+    border: none;
+    background-color: #ffffff;
+    color: #000000;
+    width: 38%;
+    font-size: 1rem;
+}
+
+.registro-form select:focus {
+    outline: 2px solid #ffc107;
+}
