Implementando buscador por categorías

--- a/frontend/src/components/ProductoList.css
+++ b/frontend/src/components/ProductoList.css
@@ -61,3 +61,31 @@
     color: #ffffff;
   }
 
+.filtro-categorias label {
+  font-weight: bold;
+}
+
+.filtro-categorias select {
+  padding: 0.4rem;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+
+.filtro-categorias {
+  padding: 20px;
+  font-size: 1rem;
+  border: 2px solid #ffc107;
+  border-radius: 8px;
+  color: #fff;
+  outline: none;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 40px;
+  max-width: 600px;
+}
+
+.select-categoria option {
+  background-color: #000;
+  color: #fff;
+}
